# nutrivision-aiepn-mobile

./: .gitignore  README.md  pubspec.yaml
.claude/: settings.local.json
.claude/agents/: nutri-arquitecto.md  nutri-designer-flutter.md  nutri-gitflow-experto.md  nutrigit-version-control.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  native_image_processor.cpp  yuv_to_rgb.h
assets/data/: fooddata.db  nutrition_fdc.json  standard_portions.json
assets/labels/: labels.txt
assets/models/: yolov11n_float32.md5
docs/: PLAN_DE_TRABAJO.md
integration_test/: README.md  performance_test.dart
lib/: main.dart
lib/app/: app.dart  routes.dart
lib/core/constants/: app_constants.dart
lib/core/exceptions/: app_exceptions.dart
lib/core/logging/: app_logger.dart  log_colors.dart  log_config.dart  log_level.dart
lib/core/router/: app_router.dart
lib/core/security/: input_validator.dart
lib/core/services/: camera_frame_processor.dart
lib/core/session/: session_manager.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: runtime_mode.dart
lib/data/datasources/: nutrition_datasource.dart  portion_datasource.dart
lib/data/models/: auth_state.dart  camera_settings.dart  detection.dart  ingredient_quantity.dart  nutrients_per_100g.dart  nutrition_data.dart  (+5 more)
lib/ml/: yolo_detector.dart
reference/: fdc_mapping_log.txt  nutrivision.yaml
test/integration/: nutrition_flow_integration_test.dart
test/ml/: yolo_detector_test.dart  yolo_service_test.dart
(+69 files in other folders)
